gdx-jnigen, fixed hang when process outputs to err stream, fixed starting process (working dir was not being respected for me!).